added needToRepeat words to work, improved mainThread